TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "128715023202720" [label="Start"];
  "128715023202720" -> "128715023200896";
  "128715023200896" [label="Code"];
  "128715023200896" -> "128715023200944";
  "128715023200944" [label="Function"];
  "128715023200944" -> "128715023200656";
  "128715023200944" -> "128715023202384";
  "128715023200944" -> "128715023196288";
  "128715023200656" [label="main"];
  "128715023202384" [label="Parameters"];
  "128715023196288" [label="Code"];
  "128715023196288" -> "128715023203632";
  "128715023196288" -> "128715023203728";
  "128715023203632" [label="Code"];
  "128715023203632" -> "128715023203296";
  "128715023203296" [label="Declaration"];
  "128715023203296" -> "128715023201520";
  "128715023203296" -> "128715023203392";
  "128715023201520" [label="x"];
  "128715023203392" [label="1"];
  "128715023203728" [label="Code"];
  "128715023203728" -> "128715023197968";
  "128715023197968" [label="Declaration"];
  "128715023197968" -> "128715023198400";
  "128715023197968" -> "128715023195328";
  "128715023198400" [label="x"];
  "128715023195328" [label="2"];
}
